[project]
name = "perfect-game"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    "fastapi[standard]>=0.135.3",
    "sqlmodel>=0.0.22",
    "psycopg2-binary>=2.9.0",
    "python-dotenv>=1.0.0",
    "imagekitio>=5.4.0",
    "python-multipart>=0.0.6",
    "fastapi-mail>=1.6.4",
    "pyjwt>=2.12.1",
    "pwdlib[argon2]>=0.3.0",
]

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pytest>=9.0.3",
]
